--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -18,69 +18,49 @@
         android:padding="30dp"
         android:orientation="vertical">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textCapSentences"
-            android:fontFamily="@font/lato_regular"
-            android:hint="@string/text_register_name"/>
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:inputType="textCapSentences"
-            android:fontFamily="@font/lato_regular"
-            android:hint="@string/text_register_lastname"/>
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:inputType="textCapSentences"
-            android:fontFamily="@font/lato_regular"
-            android:hint="@string/text_register_email"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_gravity="center_vertical"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/lato_regular"
-                android:textSize="18sp"
-                android:text="@string/text_register_school"/>
-
-            <Spinner
-                android:id="@+id/spinnerSchool"
+            <EditText
+                android:id="@+id/txtRegisterName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"/>
+                android:fontFamily="@font/lato_regular"
+                android:hint="@string/text_register_name"
+                android:inputType="textCapSentences" />
 
-        </LinearLayout>
+            <EditText
+                android:id="@+id/txtRegisterLast"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/lato_regular"
+                android:hint="@string/text_register_lastname"
+                android:inputType="textCapSentences" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:inputType="textCapSentences"
-            android:fontFamily="@font/lato_regular"
-            android:hint="@string/text_register_password"/>
+            <EditText
+                android:id="@+id/txtRegisterEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/lato_regular"
+                android:hint="@string/text_register_email"
+                android:inputType="textCapSentences" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:inputType="textCapSentences"
-            android:fontFamily="@font/lato_regular"
-            android:hint="@string/text_register_repassword"/>
+            <EditText
+                android:id="@+id/txtRegisterPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/lato_regular"
+                android:hint="@string/text_register_password"
+                android:inputType="textCapSentences" />
+
+            <EditText
+                android:id="@+id/txtRegisterPasswordReped"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/lato_regular"
+                android:hint="@string/text_register_repassword"
+                android:inputType="textCapSentences" />
 
         <LinearLayout
             android:layout_width="match_parent"
