--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,30 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent">
+    android:background="@color/colorAccent"
+    android:clickable="false"
+    android:divider="@drawable/ic_baseline_remove_red_eye_24"
+    android:orientation="vertical">
 
-    <include layout="@layout/toolbar_main"/>
+    <include layout="@layout/toolbar_main" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="30dp"
-        android:orientation="vertical">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="30dp">
 
             <EditText
                 android:id="@+id/txtRegisterName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                 android:fontFamily="@font/lato_regular"
                 android:hint="@string/text_register_name"
-                android:inputType="textCapSentences" />
+                android:inputType="textPersonName" />
 
             <EditText
                 android:id="@+id/txtRegisterLast"
@@ -33,7 +36,7 @@
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/lato_regular"
                 android:hint="@string/text_register_lastname"
-                android:inputType="textCapSentences" />
+                android:inputType="textPersonName" />
 
             <EditText
                 android:id="@+id/txtRegisterEmail"
@@ -42,77 +45,74 @@
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/lato_regular"
                 android:hint="@string/text_register_email"
-                android:inputType="textCapSentences" />
+                android:inputType="textEmailAddress" />
 
-            <EditText
-                android:id="@+id/txtRegisterPassword"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/txtRegisterPassword1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:passwordToggleEnabled="true">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/txtRegisterPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/text_register_password"
+                    android:inputType="textPassword" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:counterEnabled="false"
+                app:passwordToggleEnabled="true">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/txtRegisterPasswordReped"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/text_register_repassword"
+                    android:inputType="textPassword" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_marginTop="20dp"
-                android:fontFamily="@font/lato_regular"
-                android:hint="@string/text_register_password"
-                android:inputType="textCapSentences" />
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/txtRegisterPasswordReped"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                <CheckBox
+                    android:id="@+id/checkRegister"
+                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:buttonTint="#2E2828"
+                    android:checked="false"
+                    android:textColorLink="#0A0A0B" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/lato_regular"
+                    android:text="@string/text_register_conditions" />
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/btnRegister"
+                android:layout_width="300dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
+                android:background="@drawable/shape_button"
                 android:fontFamily="@font/lato_regular"
-                android:hint="@string/text_register_repassword"
-                android:inputType="textCapSentences" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_gravity="center_vertical"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/lato_regular"
-                android:text="@string/text_register_conditions"/>
+                android:text="@string/button_register"
+                android:textColor="@color/colorAccent"
+                android:textSize="18sp" />
 
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/lato_regular"
-                android:text="@string/text_register_newsletter"/>
-
-        </LinearLayout>
-
-        <Button
-            android:layout_width="300dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            android:text="@string/button_register"
-            android:textSize="18sp"
-            android:fontFamily="@font/lato_regular"
-            android:textColor="@color/colorAccent"
-            android:background="@drawable/shape_button"/>
-
-    </LinearLayout>
 
     </ScrollView>
 
