--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,28 +18,35 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
+        android:id="@+id/txtLoginEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:inputType="textEmailAddress"
         android:fontFamily="@font/lato_regular"
-        android:hint="@string/text_login_email"/>
+        android:hint="@string/text_login_email"
+        android:inputType="textEmailAddress" />
 
-    <EditText
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:inputType="textPassword"
-        android:fontFamily="@font/lato_regular"
-        android:hint="@string/text_login_password"/>
+        app:passwordToggleEnabled="true">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/txtLoginPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/text_login_password"
+            android:inputType="textPassword" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
+        android:id="@+id/txtResetPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_gravity="right"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/lato_regular"
-        android:text="@string/text_login_forgot_password"/>
+        android:text="@string/text_login_forgot_password" />
 
     <Button
         android:id="@+id/btnLogin"
