--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -32,9 +32,10 @@
                android:orientation="horizontal">
 
                <ImageView
+                   android:id="@+id/imgProfileGame"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
-                   android:src="@drawable/ic_profile"/>
+                   android:src="@drawable/ic_profile" />
 
                <TextView
                    android:id="@+id/txtProfileName"
