--- a/app/src/main/res/layout/activity_launcher.xml
+++ b/app/src/main/res/layout/activity_launcher.xml
@@ -8,14 +8,17 @@
     android:background="@color/colorAccent"
     tools:context=".Activitys.LauncherActivity">
 
+
     <ImageView
         android:layout_width="300dp"
-        android:layout_height="100dp"
+        android:layout_height="250dp"
+        android:src="@drawable/ic_launchergame"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.316" />
 
     <LinearLayout
         android:layout_width="match_parent"
