--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:id="@+id/txtQuestion"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar_options"/>
+        layout="@layout/toolbar_options" />
 
 
     <RelativeLayout
@@ -15,68 +16,68 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_below="@+id/toolbar"
-        android:gravity="center_vertical"
-        android:background="@color/colorAccent">
+        android:background="@color/colorAccent"
+        android:gravity="center_vertical">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:paddingStart="20dp"
-            android:paddingLeft="20dp"
             android:layout_alignParentLeft="true"
-            android:orientation="horizontal">
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingStart="20dp"
+            android:paddingLeft="20dp">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginLeft="20dp"
-                android:tint="@color/colorOptionMenuHistory"
-                android:src="@drawable/ic_diary"/>
+                android:src="@drawable/ic_diary"
+                android:tint="@color/colorOptionMenuHistory" />
 
             <TextView
+                android:id="@+id/txtTiempo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
-                android:textSize="25sp"
                 android:fontFamily="@font/lato_bold"
-                android:text="02"/>
+                android:textSize="25sp" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingEnd="20dp"
-            android:paddingRight="20dp"
             android:layout_alignParentRight="true"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingEnd="20dp"
+            android:paddingRight="20dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
-                android:textSize="25sp"
                 android:fontFamily="@font/lato_bold"
-                android:text="02"/>
+                android:text="02"
+                android:textSize="25sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="25sp"
                 android:fontFamily="@font/lato_bold"
-                android:text="/"/>
+                android:text="/"
+                android:textSize="25sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="25sp"
                 android:fontFamily="@font/lato_bold"
+                android:text="05"
                 android:textColor="@color/colorOptionMenuHistory"
-                android:text="05"/>
+                android:textSize="25sp" />
         </LinearLayout>
 
 
@@ -84,149 +85,113 @@
 
     <ProgressBar
         android:id="@+id/progressTimer"
+        style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
         android:layout_height="5dp"
         android:layout_below="@+id/relativeTimer"
         android:max="100"
         android:progress="45"
-        android:progressDrawable="@drawable/custom_progressbar"
-        style="?android:attr/progressBarStyleHorizontal" />
+        android:progressDrawable="@drawable/custom_progressbar" />
 
 
-   <ScrollView
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:layout_below="@+id/progressTimer"
-       android:layout_above="@+id/linearComodin"
-       android:background="@color/colorQuestionBG">
-
-       <LinearLayout
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:orientation="vertical"
-           android:gravity="center_horizontal">
-
-           <androidx.cardview.widget.CardView
-               android:layout_width="350dp"
-               android:layout_height="120dp"
-               android:layout_margin="20dp"
-               android:elevation="2dp"
-               app:cardCornerRadius="10dp">
-
-               <TextView
-                   android:layout_width="200dp"
-                   android:layout_height="wrap_content"
-                   android:gravity="center"
-                   android:layout_gravity="center"
-                   android:fontFamily="@font/lato_regular"
-                   android:textSize="18sp"
-                   android:textColor="@color/colorQuestionText"
-                   android:text="¿En qué año se proclamó la Independencia del Perú?"/>
-
-           </androidx.cardview.widget.CardView>
-
-           <LinearLayout
-               android:layout_width="330dp"
-               android:layout_height="60dp"
-               android:layout_marginTop="30dp"
-               android:gravity="center"
-               android:background="@drawable/shape_options_answer">
-
-               <TextView
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:gravity="center"
-                   android:layout_gravity="center"
-                   android:fontFamily="@font/lato_regular"
-                   android:textSize="18sp"
-                   android:textColor="@color/colorQuestionText"
-                   android:text="1820"/>
-
-
-           </LinearLayout>
-
-           <LinearLayout
-               android:layout_width="330dp"
-               android:layout_height="60dp"
-               android:layout_marginTop="15dp"
-               android:gravity="center"
-               android:background="@drawable/shape_options_answer">
-
-               <TextView
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:gravity="center"
-                   android:layout_gravity="center"
-                   android:fontFamily="@font/lato_regular"
-                   android:textSize="18sp"
-                   android:textColor="@color/colorQuestionText"
-                   android:text="1821"/>
-
-
-           </LinearLayout>
-
-           <LinearLayout
-               android:layout_width="330dp"
-               android:layout_height="60dp"
-               android:layout_marginTop="15dp"
-               android:gravity="center"
-               android:background="@drawable/shape_options_answer">
-
-               <TextView
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:gravity="center"
-                   android:layout_gravity="center"
-                   android:fontFamily="@font/lato_regular"
-                   android:textSize="18sp"
-                   android:textColor="@color/colorQuestionText"
-                   android:text="1822"/>
-
-
-           </LinearLayout>
-
-           <LinearLayout
-               android:layout_width="330dp"
-               android:layout_height="60dp"
-               android:layout_marginTop="15dp"
-               android:gravity="center"
-               android:background="@drawable/shape_options_answer">
-
-               <TextView
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:gravity="center"
-                   android:layout_gravity="center"
-                   android:fontFamily="@font/lato_regular"
-                   android:textSize="18sp"
-                   android:textColor="@color/colorQuestionText"
-                   android:text="1823"/>
-
-
-           </LinearLayout>
-
-
-       </LinearLayout>
-
-   </ScrollView>
-
-    <LinearLayout
-        android:id="@+id/linearComodin"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:gravity="center"
-        android:layout_alignParentBottom="true"
-        android:background="@color/colorIpae">
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/progressTimer"
+        android:background="@color/colorQuestionBG">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="20sp"
-            android:fontFamily="@font/lato_regular"
-            android:textColor="@color/colorAccent"
-            android:text="Comodín Zegel IPAE"/>
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
-    </LinearLayout>
+            <androidx.cardview.widget.CardView
+                android:layout_width="350dp"
+                android:layout_height="120dp"
+                android:layout_margin="20dp"
+                android:elevation="2dp"
+                app:cardCornerRadius="10dp">
+
+                <TextView
+                    android:id="@+id/txtquestions"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/lato_regular"
+                    android:gravity="center"
+                    android:textColor="@color/colorQuestionText"
+                    android:textSize="18sp" />
+
+            </androidx.cardview.widget.CardView>
+
+            <LinearLayout
+                android:id="@+id/lineer01"
+                android:layout_width="330dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/shape_options_answer"
+                android:gravity="center">
+
+                <Button
+                    android:id="@+id/txtopcone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@color/colorAccent"
+                    android:fontFamily="@font/lato_regular"
+                    android:gravity="center"
+                    android:textColor="@color/colorQuestionText"
+                    android:textSize="18sp" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="330dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/shape_options_answer"
+                android:gravity="center">
+
+                <Button
+                    android:id="@+id/txtopctwo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@color/colorAccent"
+                    android:fontFamily="@font/lato_regular"
+                    android:gravity="center"
+                    android:textColor="@color/colorQuestionText"
+                    android:textSize="18sp" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="330dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/shape_options_answer"
+                android:gravity="center">
+
+                <Button
+                    android:id="@+id/txtopcthree"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@color/colorAccent"
+                    android:fontFamily="@font/lato_regular"
+                    android:gravity="center"
+                    android:textColor="@color/colorQuestionText"
+                    android:textSize="18sp" />
+
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </RelativeLayout>
