--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -7,13 +7,13 @@
     android:background="@color/colorQuestionBG">
 
     <include
-        android:id="@+id/toolbar"
+        android:id="@+id/toolbarHistory"
         layout="@layout/toolbar_options"/>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar">
+        android:layout_below="@+id/toolbarHistory">
 
        <LinearLayout
            android:layout_width="match_parent"
