--- a/app/src/main/res/layout/activity_history_list.xml
+++ b/app/src/main/res/layout/activity_history_list.xml
@@ -5,41 +5,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar_options"/>
+        android:id="@+id/toolbarHistory"
+        layout="@layout/toolbar_history"/>
 
-    <ScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/historyList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar"
-        android:layout_above="@+id/linearComodin"
-        android:background="@color/colorQuestionBG">
+        android:layout_below="@id/toolbarHistory"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="400dp"
-        android:layout_height="120dp"
-        android:layout_margin="5dp"
-        android:elevation="2dp"
-        app:cardCornerRadius="10dp">
-
-        <TextView
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:fontFamily="@font/lato_regular"
-            android:textSize="18sp"
-            android:textColor="@color/colorQuestionText"
-            android:text="¿En qué año se proclamó la Independencia del Perú?"/>
-
-    </androidx.cardview.widget.CardView>
-
-    </LinearLayout>
-
-    </ScrollView>
 </RelativeLayout>
