--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -56,12 +56,12 @@
             android:paddingRight="20dp">
 
             <TextView
+                android:id="@+id/txtnum"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
                 android:fontFamily="@font/lato_bold"
-                android:text="02"
                 android:textSize="25sp" />
 
             <TextView
