--- a/app/src/main/res/layout/activity_recycler_diary.xml
+++ b/app/src/main/res/layout/activity_recycler_diary.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#BCE4F6"
+    android:background="#f8ffb8"
     android:orientation="horizontal">
 
     <LinearLayout
@@ -39,6 +39,7 @@
                     android:layout_marginTop="10sp"
                     android:gravity="center"
                     android:text="CELEBRACION POR HALLOWEEN"
+                    android:textColor="@color/color_launch"
                     android:textStyle="bold" />
 
                 <LinearLayout
@@ -53,6 +54,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Fecha:"
+                        android:textColor="@color/color_launch"
                         android:textStyle="bold" />
 
                     <TextView
@@ -60,7 +62,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="10-11-2020" />
+                        android:text="10-11-2020"
+                        android:textColor="@color/color_launch" />
 
                 </LinearLayout>
 
@@ -76,6 +79,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Hora:"
+                        android:textColor="@color/color_launch"
                         android:textStyle="bold" />
 
                     <TextView
@@ -83,7 +87,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="8:00 PM" />
+                        android:text="8:00 PM"
+                        android:textColor="@color/color_launch" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -98,6 +103,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Direccion:"
+                        android:textColor="@color/color_launch"
                         android:textStyle="bold" />
 
                     <TextView
@@ -105,7 +111,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Plaza de trujillo" />
+                        android:text="Plaza de trujillo"
+                        android:textColor="@color/color_launch" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
