--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,7 +8,9 @@
     android:divider="@drawable/ic_baseline_remove_red_eye_24"
     android:orientation="vertical">
 
-    <include layout="@layout/toolbar_main" />
+    <include
+        android:id="@+id/bnhr"
+        layout="@layout/toolbar_main" />
 
     <ScrollView
         android:layout_width="match_parent"
