--- a/app/src/main/res/layout/activity_resert_password.xml
+++ b/app/src/main/res/layout/activity_resert_password.xml
@@ -1,19 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/plantillainicios"
+    android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/txtResetEmail"
+    <include
+        android:id="@+id/toolbarvideo"
+        layout="@layout/toolbar_repetir_password"
+        />
+
+    <ImageView
+        android:id="@+id/imageView6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textEmailAddress" />
+        app:srcCompat="@drawable/bicentanario_blancologin" />
 
-    <Button
-        android:id="@+id/btnReset"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Ingrese su nueva contraseña"
+            android:textColor="@color/colorAccent"
+            android:textSize="18sp" />
+
+        <EditText
+            android:id="@+id/txtResetEmail"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="15dp"
+            android:background="@color/colorAccent"
+            android:hint="Nueva Contraseña"
+            android:inputType="textEmailAddress" />
+
+        <Button
+            android:id="@+id/btnReset"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="INGRESAR"
+            android:textStyle="bold" />
+    </LinearLayout>
+
 </LinearLayout>
