--- a/app/src/main/res/layout/activity_recycler_diary.xml
+++ b/app/src/main/res/layout/activity_recycler_diary.xml
@@ -24,6 +24,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_marginLeft="5dp"
             android:orientation="vertical">
 
             <LinearLayout
