--- a/app/src/main/res/layout/toolbar_main.xml
+++ b/app/src/main/res/layout/toolbar_main.xml
@@ -6,7 +6,7 @@
     android:gravity="center_vertical">
 
     <ImageView
-        android:id="@+id/imgToolbarBack"
+        android:id="@+id/imgToolbarBackregister"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:padding="12dp"
