--- a/app/src/main/res/layout/toolbar_terminos.xml
+++ b/app/src/main/res/layout/toolbar_terminos.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/txtdiaryToolbar"
+    android:id="@+id/txtterminosToolbar"
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:background="@color/colorOptionMenuHistory"
     android:gravity="center_vertical"
     android:orientation="horizontal">
+
+
     <ImageView
-        android:id="@+id/imgToolbarBack"
+        android:id="@+id/imgToolterminos"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_weight="0"
@@ -24,7 +26,7 @@
         android:textSize="20sp"
         android:textColor="@color/colorAccent"
         android:fontFamily="@font/lato_regular"
-        android:text="@string/text_game_name"/>
+        android:text="@string/text_terminos"/>
 
 
     <ImageView
