--- a/app/src/main/res/layout/toolbar_videos.xml
+++ b/app/src/main/res/layout/toolbar_videos.xml
@@ -8,9 +8,10 @@
     android:orientation="horizontal">
 
     <ImageView
-        android:layout_below="@+id/imgToolbarBackVideo"
+        android:id="@+id/txtatrasvideo"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_below="@+id/imgToolbarBackVideo"
         android:layout_weight="0"
         android:padding="12dp"
         android:src="@drawable/back_arrow"
