--- a/app/src/main/res/layout/toolbar_videos_details.xml
+++ b/app/src/main/res/layout/toolbar_videos_details.xml
@@ -1,39 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/txtdiaryToolbar"
+    android:id="@+id/txtVideosToolbardetals"
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:background="@color/colorOptionMenuHistory"
     android:gravity="center_vertical"
     android:orientation="horizontal">
+
     <ImageView
-        android:id="@+id/imgToolbarBack"
+        android:id="@+id/txtatrasvideodetails"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_below="@+id/imgToolbarBackVideo"
         android:layout_weight="0"
         android:padding="12dp"
-        android:tint="@color/colorAccent"
-        android:src="@drawable/back_arrow"/>
+        android:src="@drawable/back_arrow"
+        android:tint="@color/colorAccent" />
 
     <TextView
         android:id="@+id/textToolbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_weight="1"
-        android:textSize="20sp"
-        android:textColor="@color/colorAccent"
         android:fontFamily="@font/lato_regular"
-        android:text="@string/text_game_name"/>
+        android:gravity="center"
+        android:text="@string/text_settings_video_details"
+        android:textColor="@color/colorAccent"
+        android:textSize="20sp" />
 
 
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:visibility="invisible"
         android:layout_weight="0"
         android:padding="12dp"
+        android:src="@drawable/back_arrow"
         android:tint="@color/colorAccent"
-        android:src="@drawable/back_arrow"/>
+        android:visibility="invisible" />
 
 </LinearLayout>
