--- a/app/src/main/res/layout/activity_item_history.xml
+++ b/app/src/main/res/layout/activity_item_history.xml
@@ -12,11 +12,26 @@
         android:layout_height="match_parent">
 
         <ImageView
+            android:id="@+id/itemList"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="235dp"
             android:src="@drawable/ic_caballitos">
 
         </ImageView>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="33dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="33dp"
+                android:layout_marginBottom="5dp"
+                android:hint="Título"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:gravity="center"/>
+        </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
